<resources>
    <string name="app_name">QuizApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="correct_ans">Correct</string>
    <string name="wrong_ans">Wrong</string>
    <string name="nextQ">Next</string>
    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt</string>
    <string name="question_americas">The Amazon River is the longest river in the Americas.</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and freshwater lake.</string>
    <string name="prevQ">Previous</string>
    <string name="first_q">First Question</string>
    <string name="cheat_button">Cheat</string>
    <string name="confirm_cheat">Are you sure?</string>
    <string name="show_ans_button">Show Answer</string>
    <string name="judgement">Cheating is bad!!!</string>


</resources>
